gccida/c0/constrain_operands
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2808:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v30; // [rsp+50h] [rbp-380h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+B4h] [rbp-31Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2835:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2835:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_operands || !recog_data_0.n_alternatives ) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2837:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( c = 0; c < recog_data_0.n_operands; ++c ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2839:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
constraints[c] = recog_data_0.constraints[c]; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2846:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( opno = 0; opno < recog_data_0.n_operands; ++opno ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2848:12: error: expected identifier or '('
 struct op = recog_data_0.operand[opno]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2855:2: error: expected expression
 struct op = op->fld[0].rtx; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2861:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2861:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2863:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2863:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2864:12: error: expected identifier or '('
 struct op = op->fld[0].rtx; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2912:2: error: expected expression
 struct match = strtoul( p - 1, &end, 10); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2916:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
op1 = recog_data_0.operand[match]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:2917:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
op2 = recog_data_0.operand[opno]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:3094:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( stricta <= 0 || strict_memory_address_p( recog_data_0.operand_mode[opno], op) ) 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:3311:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( eopno = 0; eopno < recog_data_0.n_operands; ++eopno ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/constrain_operands/src/obj/recog.o] Error 1
